package com.graphaware.pizzeria.model;

import lombok.Data;
import lombok.Getter;
import lombok.Setter;

import javax.persistence.*;
import javax.validation.constraints.NotNull;
import java.util.List;

@Entity
@Data
@Getter
@Setter
public class PizzeriaUser {
	@Id
	@GeneratedValue(strategy = GenerationType.AUTO)
	private long id;

	@NotNull
	private String name;

	@NotNull
	private String username;

	@NotNull
	private String password;

	@NotNull
	private String email;

	@NotNull
	@Convert(converter = RoleConverter.class)
	@Column(length = 10485760)
	private List<UserRole> roles;

}
