package com.graphaware.pizzeria.model;

public enum PurchaseState {
	DRAFT, PLACED, ONGOING, SERVED
}
