package com.graphaware.pizzeria.model;

public enum UserRole {
	OWNER, PIZZA_MAKER, CUSTOMER
}
